--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -165,10 +165,12 @@ jobs:
         echo "🚀 Launching EC2 instance for AMI creation..."
         echo "Environment: $ENVIRONMENT"
         echo "Instance name: $INSTANCE_NAME"
+        echo "Docker image URI: $DOCKER_IMAGE_URI"
         
         # Create user data script
         ENVIRONMENT="${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}"
         S3_PREFIX="s3://viral-comm-api-ec2-deployments-dev/comfy-docker/${ENVIRONMENT}"
+        DOCKER_IMAGE_URI="${{ needs.build-and-push.outputs.image-uri }}"
         
         cat > user-data.sh << EOF
         #!/bin/bash
@@ -202,15 +204,12 @@ jobs:
         
         # Run the AMI preparation
         echo "Starting AMI preparation script..."
-        
-        # Pass Docker image as parameter to ensure it's available
-        DOCKER_IMAGE="${{ needs.build-and-push.outputs.image-uri }}"
-        echo "Using Docker image: \$DOCKER_IMAGE"
+        echo "Using Docker image: ${DOCKER_IMAGE_URI}"
         
         # Run with timeout to prevent infinite hangs
-        timeout 1800 /scripts/prepare_ami.sh "\$DOCKER_IMAGE" || {
+        timeout 1800 /scripts/prepare_ami.sh "${DOCKER_IMAGE_URI}" || {
             echo "❌ AMI preparation script timed out or failed"
-            echo "Exit code: $?"
+            echo "Exit code: \$?"
             echo "Last checkpoint:"
             cat /tmp/ami_progress.txt 2>/dev/null || echo "No progress file found"
             exit 1
@@ -410,7 +409,47 @@ jobs:
             if [[ "$RESULT" == *"ERROR:"* || "$RESULT" == *"FAILED"* || "$RESULT" == *"error:"* ]]; then
               echo "❌ Detected errors in AMI preparation logs"
               echo "🔍 Getting detailed error information..."
-              break
+              
+              # Get detailed logs immediately when error is detected
+              ERROR_LOG_ID=$(aws ssm send-command \
+                --instance-ids $INSTANCE_ID \
+                --document-name "AWS-RunShellScript" \
+                --parameters 'commands=[
+                  "echo === DETAILED ERROR INVESTIGATION ===",
+                  "echo === User Data Log (last 100 lines) ===",
+                  "tail -100 /var/log/user-data.log 2>/dev/null || echo No user-data log found",
+                  "echo === AMI Preparation Log ===",
+                  "tail -50 /var/log/ami-preparation.log 2>/dev/null || echo No AMI preparation log found",
+                  "echo === CloudInit Output Log ===",
+                  "tail -50 /var/log/cloud-init-output.log 2>/dev/null || echo No cloud-init-output log found",
+                  "echo === Process Status ===",
+                  "ps aux | grep -E \"prepare_ami|user-data\" || echo No relevant processes found",
+                  "echo === Script Files Check ===",
+                  "ls -la /scripts/ 2>/dev/null || echo Scripts directory not found",
+                  "echo === Environment Variables (from user-data context) ===",
+                  "env | grep -E \"DOCKER|COMFY\" || echo No Docker/ComfyUI environment variables found",
+                  "echo === System Status ===",
+                  "df -h && echo && free -h"
+                ]' \
+                --region ${{ env.AWS_REGION }} \
+                --query 'Command.CommandId' \
+                --output text 2>/dev/null || echo "")
+              
+              if [ -n "$ERROR_LOG_ID" ]; then
+                sleep 10
+                ERROR_DETAILS=$(aws ssm get-command-invocation \
+                  --command-id $ERROR_LOG_ID \
+                  --instance-id $INSTANCE_ID \
+                  --region ${{ env.AWS_REGION }} \
+                  --query 'StandardOutputContent' \
+                  --output text 2>/dev/null || echo "Could not retrieve error details")
+                
+                echo "=== DETAILED ERROR INFORMATION ==="
+                echo "$ERROR_DETAILS"
+                echo "================================="
+              fi
+              
+              exit 1
             fi
             
             if [[ "$RESULT" == *"READY"* ]]; then
@@ -462,80 +501,47 @@ jobs:
         done
 
     - name: Verify ComfyUI setup
-      timeout-minutes: 10
+      timeout-minutes: 5
       run: |
         INSTANCE_ID="${{ steps.launch-instance.outputs.instance-id }}"
         echo "🔍 Verifying ComfyUI setup and health..."
         
-        # Check if Docker is running with proper wait and retry logic
-        echo "🐳 Checking Docker status (with patience for installation)..."
+        # Check if Docker is running (AMI preparation should be complete by now)
+        echo "🐳 Checking Docker status..."
         
-        DOCKER_READY=false
-        for attempt in {1..20}; do
-          echo "🔄 Docker check attempt $attempt/20..."
-          
-          DOCKER_CHECK_ID=$(aws ssm send-command \
-            --instance-ids $INSTANCE_ID \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=[
-              "echo === Docker Service Status ===",
-              "systemctl is-active docker 2>/dev/null && echo DOCKER_SERVICE_ACTIVE || echo DOCKER_SERVICE_INACTIVE",
-              "echo === Docker Version Check ===",
-              "if command -v docker >/dev/null 2>&1; then",
-              "  docker version 2>/dev/null && echo DOCKER_VERSION_OK || echo DOCKER_VERSION_FAIL",
-              "else",
-              "  echo DOCKER_NOT_INSTALLED",
-              "fi",
-              "echo === Docker Info ===",
-              "if systemctl is-active docker >/dev/null 2>&1; then",
-              "  docker info 2>/dev/null && echo DOCKER_INFO_OK || echo DOCKER_INFO_FAIL",
-              "else",
-              "  echo DOCKER_SERVICE_NOT_RUNNING",
-              "fi",
-              "echo === Final Status ===",
-              "if systemctl is-active docker >/dev/null 2>&1 && docker version >/dev/null 2>&1; then",
-              "  echo DOCKER_OK",
-              "else",
-              "  echo DOCKER_FAIL",
-              "fi"
-            ]' \
-            --region ${{ env.AWS_REGION }} \
-            --query 'Command.CommandId' \
-            --output text 2>/dev/null || echo "")
-          
-          if [ -n "$DOCKER_CHECK_ID" ]; then
-            sleep 10
-            
-            DOCKER_STATUS=$(aws ssm get-command-invocation \
-              --command-id $DOCKER_CHECK_ID \
-              --instance-id $INSTANCE_ID \
-              --region ${{ env.AWS_REGION }} \
-              --query 'StandardOutputContent' \
-              --output text 2>/dev/null || echo "PENDING")
-            
-            echo "Docker Status Details (attempt $attempt):"
-            echo "$DOCKER_STATUS"
-            
-            if [[ "$DOCKER_STATUS" == *"DOCKER_OK"* ]]; then
-              echo "✅ Docker is ready!"
-              DOCKER_READY=true
-              break
-            elif [[ "$DOCKER_STATUS" == *"DOCKER_NOT_INSTALLED"* ]]; then
-              echo "⏳ Docker not yet installed, waiting..."
-            elif [[ "$DOCKER_STATUS" == *"DOCKER_SERVICE_INACTIVE"* ]]; then
-              echo "⏳ Docker service not yet active, waiting..."
-            else
-              echo "⏳ Docker not fully ready yet, waiting..."
-            fi
-          else
-            echo "⏳ SSM command failed, waiting..."
-          fi
-          
-          sleep 10
-        done
+        DOCKER_CHECK_ID=$(aws ssm send-command \
+          --instance-ids $INSTANCE_ID \
+          --document-name "AWS-RunShellScript" \
+          --parameters 'commands=[
+            "echo === Docker Service Status ===",
+            "systemctl is-active docker 2>/dev/null && echo DOCKER_SERVICE_ACTIVE || echo DOCKER_SERVICE_INACTIVE",
+            "systemctl status docker --no-pager -l",
+            "echo === Docker Version Check ===",
+            "docker version || echo DOCKER_VERSION_FAILED",
+            "echo === Docker Info ===",
+            "docker info || echo DOCKER_INFO_FAILED",
+            "echo === Docker Images ===",
+            "docker images || echo DOCKER_IMAGES_FAILED",
+            "echo === Final Status ===",
+            "if systemctl is-active docker >/dev/null 2>&1 && docker version >/dev/null 2>&1; then echo DOCKER_OK; else echo DOCKER_FAIL; fi"
+          ]' \
+          --region ${{ env.AWS_REGION }} \
+          --query 'Command.CommandId' \
+          --output text)
         
-        if [ "$DOCKER_READY" != "true" ]; then
-          echo "❌ Docker failed to become ready within timeout"
+        sleep 15
+        DOCKER_STATUS=$(aws ssm get-command-invocation \
+          --command-id $DOCKER_CHECK_ID \
+          --instance-id $INSTANCE_ID \
+          --region ${{ env.AWS_REGION }} \
+          --query 'StandardOutputContent' \
+          --output text)
+        
+        echo "Docker Status Details:"
+        echo "$DOCKER_STATUS"
+        
+        if [[ "$DOCKER_STATUS" != *"DOCKER_OK"* ]]; then
+          echo "❌ Docker is not running properly"
           
           # Get additional debugging info
           echo "🔍 Getting additional debugging information..."
@@ -548,11 +554,11 @@ jobs:
               "echo === User Data Log ===", 
               "tail -50 /var/log/user-data.log 2>/dev/null || echo No user data log found",
               "echo === Docker Service Logs ===",
-              "journalctl -u docker --no-pager -n 20 2>/dev/null || echo No Docker logs found",
+              "journalctl -u docker --no-pager -n 20 || echo No Docker logs found",
               "echo === System Status ===",
               "df -h",
               "free -m",
-              "ps aux | head -20"
+              "ps aux | grep docker"
             ]' \
             --region ${{ env.AWS_REGION }} \
             --query 'Command.CommandId' \
@@ -571,58 +577,43 @@ jobs:
           
           exit 1
         fi
+        echo "✅ Docker is running"
         
-        # Check if ComfyUI Docker image is available (with patience)
-        echo "🖼️ Checking ComfyUI Docker image availability..."
+        # Check if ComfyUI Docker image is available
+        echo "🖼️ Checking ComfyUI Docker image..."
+        IMAGE_CHECK_ID=$(aws ssm send-command \
+          --instance-ids $INSTANCE_ID \
+          --document-name "AWS-RunShellScript" \
+          --parameters 'commands=[
+            "echo === Docker Images Check ===",
+            "docker images 2>/dev/null || echo DOCKER_IMAGES_FAILED",
+            "echo === ComfyUI Image Check ===",
+            "if docker images | grep -q comfyui; then",
+            "  echo IMAGE_OK",
+            "else",
+            "  echo IMAGE_FAIL",
+            "fi"
+          ]' \
+          --region ${{ env.AWS_REGION }} \
+          --query 'Command.CommandId' \
+          --output text)
         
-        IMAGE_READY=false
-        for attempt in {1..10}; do
-          echo "🔍 Image check attempt $attempt/10..."
-          
-          IMAGE_CHECK_ID=$(aws ssm send-command \
-            --instance-ids $INSTANCE_ID \
-            --document-name "AWS-RunShellScript" \
-            --parameters 'commands=[
-              "echo === Docker Images Check ===",
-              "docker images 2>/dev/null || echo DOCKER_IMAGES_FAILED",
-              "echo === ComfyUI Image Check ===",
-              "if docker images | grep -q comfyui; then",
-              "  echo IMAGE_OK",
-              "else",
-              "  echo IMAGE_FAIL",
-              "fi"
-            ]' \
-            --region ${{ env.AWS_REGION }} \
-            --query 'Command.CommandId' \
-            --output text)
-          
-          sleep 10
-          IMAGE_STATUS=$(aws ssm get-command-invocation \
-            --command-id $IMAGE_CHECK_ID \
-            --instance-id $INSTANCE_ID \
-            --region ${{ env.AWS_REGION }} \
-            --query 'StandardOutputContent' \
-            --output text)
-          
-          echo "Image Status (attempt $attempt):"
-          echo "$IMAGE_STATUS"
-          
-          if [[ "$IMAGE_STATUS" == *"IMAGE_OK"* ]]; then
-            echo "✅ ComfyUI Docker image is available"
-            IMAGE_READY=true
-            break
-          else
-            echo "⏳ ComfyUI Docker image not yet available, waiting..."
-            sleep 10
-          fi
-        done
+        sleep 10
+        IMAGE_STATUS=$(aws ssm get-command-invocation \
+          --command-id $IMAGE_CHECK_ID \
+          --instance-id $INSTANCE_ID \
+          --region ${{ env.AWS_REGION }} \
+          --query 'StandardOutputContent' \
+          --output text)
         
-        if [ "$IMAGE_READY" != "true" ]; then
-          echo "❌ ComfyUI Docker image not found after timeout"
-          echo "🔍 Final image status:"
-          echo "$IMAGE_STATUS"
+        echo "Image Status:"
+        echo "$IMAGE_STATUS"
+        
+        if [[ "$IMAGE_STATUS" != *"IMAGE_OK"* ]]; then
+          echo "❌ ComfyUI Docker image not found"
           exit 1
         fi
+        echo "✅ ComfyUI Docker image is available"
         
         # Test ComfyUI container functionality (without leaving it running)
         echo "🧪 Testing ComfyUI container functionality..."
